project/force-app/main/default/objects/Liquidation__c/Liquidation__c.object-meta.xml
<CustomObject>
    <label>Liquidation</label>
    <pluralLabel>Liquidations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Liquidation Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>