project/force-app/main/default/objects/Liquidation__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request not submitted</fullName>
            </value>
            <value>
                <fullName>Request submitted</fullName>
            </value>
            <value>
                <fullName>Approved Level 1</fullName>
            </value>
            <value>
                <fullName>Approved Level 2</fullName>
            </value>
            <value>
                <fullName>Approved Level 3</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>