project/force-app/main/default/objects/Liquidation__c/fields/Approver_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_2__c</fullName>
    <label>Approver Level 2</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_Level_2s</relationshipName>
</CustomField>