project/force-app/main/default/objects/Liquidation__c/fields/Approver_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_3__c</fullName>
    <label>Approver Level 3</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_Level_3s</relationshipName>
</CustomField>