project/force-app/main/default/objects/Liquidation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Case</referenceTo>
    <relationshipName>Cases</relationshipName>
</CustomField>