project/force-app/main/default/objects/Liquidation__c/fields/Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Amount__c</fullName>
    <label>Compensation Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>