project/force-app/main/default/objects/Liquidation__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Contracts</relationshipName>
</CustomField>