project/force-app/main/default/objects/Liquidation__c/fields/Contracts_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Expired_Date__c</fullName>
    <label>Contract's Expired Date</label>
    <type>Date</type>
    <formula>Contract__r.EndDate</formula>
</CustomField>