project/force-app/main/default/objects/Liquidation__c/fields/Customer_Response_Day__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_Day__c</fullName>
    <label>Customer Response Day</label>
    <type>Date</type>
</CustomField>