project/force-app/main/default/objects/Liquidation__c/fields/Decrease_In_Full_Rate__c.field-meta.xml
<CustomField>
    <fullName>Decrease_In_Full_Rate__c</fullName>
    <label>Decrease In Full Rate</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>IF(Product__r.Area__c &gt; 0, Product__r.Area__c / 100, 0)</formula>
</CustomField>