project/force-app/main/default/objects/Liquidation__c/fields/End_Negotiation_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Negotiation_Date__c</fullName>
    <label>End Negotiation Date</label>
    <type>Date</type>
</CustomField>