project/force-app/main/default/objects/Liquidation__c/fields/Liquidation_Report_Recalling_Date__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Report_Recalling_Date__c</fullName>
    <label>Liquidation Report Recalling Date</label>
    <type>Date</type>
</CustomField>