project/force-app/main/default/objects/Liquidation__c/fields/Liquidation_Risk__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Risk__c</fullName>
    <label>Liquidation Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Thấp</fullName>
            </value>
            <value>
                <fullName>Cao</fullName>
            </value>
            <value>
                <fullName>Chắc chắn thanh lý</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>