project/force-app/main/default/objects/Liquidation__c/fields/Liquidation_Type__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Type__c</fullName>
    <label>Liquidation Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Liquidation</fullName>
            </value>
            <value>
                <fullName>On-time Liquidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>