project/force-app/main/default/objects/Liquidation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Liquidation_Opportunities</relationshipName>
</CustomField>