project/force-app/main/default/objects/Liquidation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Liquidation_Products</relationshipName>
</CustomField>