project/force-app/main/default/objects/Liquidation__c/fields/RO_Return_Status__c.field-meta.xml
<CustomField>
    <fullName>RO_Return_Status__c</fullName>
    <label>RO Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>