project/force-app/main/default/objects/Liquidation__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Customer Response</fullName>
            </value>
            <value>
                <fullName>Closed Liquidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>