project/force-app/main/default/objects/Liquidation__c/fields/Start_Negotiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Negotiation_Date__c</fullName>
    <label>Start Negotiation Date</label>
    <type>Date</type>
</CustomField>